--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ redis==5.0.1
 SQLAlchemy==2.0.29
 asyncpg==0.29.0
 alembic==1.13.1
-
+email-validator==2.1.0.post1 
 # Auth
 python-jose==3.3.0
 passlib[bcrypt]==1.7.4
